css sorted and z-index issues sorted for hamburger menu. solution was to add another layer for opacity fixed 100% and toggle hide show onclick, and tie the animations to it.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,7 +66,8 @@ table {
     left: 50%; }
 
 body {
-  font-size: 1rem; }
+  font-size: 1rem;
+  transition: margin-left .5s; }
 
 h1 {
   font-size: 3.2em; }
@@ -91,7 +92,7 @@ video {
   height: 100vh; }
 
 .nav {
-  z-index: 1;
+  z-index: 2;
   position: absolute;
   top: 2vh;
   left: 0;
@@ -130,7 +131,7 @@ video {
   /* 0 width - change this with JavaScript */
   position: fixed;
   /* Stay in place */
-  z-index: 1;
+  z-index: 3;
   /* Stay on top */
   top: 0;
   left: 0;
@@ -164,8 +165,18 @@ video {
   font-size: 36px;
   margin-left: 50px; }
 
-/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+a
 #container {
+  transition: margin-left .5s;
+  z-index: 1; }
+
+#opacity {
+  display: none;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  z-index: 2;
   transition: margin-left .5s; }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
