--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -1,3 +1,4 @@
 body{
     font-size: 1rem;
+    transition: margin-left .5s;
 }
