--- a/sass/components/hamburgerMenu.scss
+++ b/sass/components/hamburgerMenu.scss
@@ -3,7 +3,7 @@
     height: 100%; /* 100% Full-height */
     width: 0; /* 0 width - change this with JavaScript */
     position: fixed; /* Stay in place */
-    z-index: 1; /* Stay on top */
+    z-index: 3; /* Stay on top */
     top: 0;
     left: 0;
     background-color: #111; /* Black*/
@@ -35,9 +35,19 @@
     font-size: 36px;
     margin-left: 50px;
 }
-
+a
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
 #container {
+    transition: margin-left .5s;
+    z-index: 1;
+}
+#opacity{
+    display: none;
+    background-color: rgba($color: #000000, $alpha: .5);
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    z-index: 2;
     transition: margin-left .5s;
 }
 
