--- a/sass/components/header.scss
+++ b/sass/components/header.scss
@@ -13,7 +13,7 @@ video {
   height: 100vh;
 }
 .nav {
-  z-index: 1;
+  z-index: 2;
   position: absolute;
   top: 2vh;
   left: 0;
